# pdmt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: template_performance.rs
docs/todo/: deterministic-mcp-templating-spec.md
examples/: readme_builder.rs  resume_builder.rs  todo_generation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_template_engine.rs  fuzz_todo_validator.rs  fuzz_yaml_parsing.rs
src/: error.rs  lib.rs
src/mcp/: mod.rs  tools.rs
src/models/: content.rs  mcp.rs  mod.rs  quality.rs  template.rs  todo.rs
src/quality/: enforcement.rs  gates.rs  mod.rs  proxy.rs
src/template/: definition.rs  engine.rs  inheritance.rs  mod.rs  schema.rs
src/validators/: mod.rs  structure.rs  todo.rs
templates/: todo-list-example.yml  todo-list.hbs
tests/: content_tests.rs  error_tests.rs  integration.rs  lib_tests.rs  property_tests.rs.bak  template_tests.rs  todo_edge_cases.rs  validator_tests.rs
